Distinct and data type profiling as dictionary functions

--- a/examples/notebooks/Datatypes.ipynb
+++ b/examples/notebooks/Datatypes.ipynb
@@ -221,8 +221,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openclean.function.predicate.datatype import IsInt\n",
-    "from openclean.function.predicate.logic import Not\n",
+    "from openclean.function.eval.predicate.datatype import IsInt\n",
+    "from openclean.function.eval.predicate.logic import Not\n",
     "from openclean.operator.transform.filter import filter\n",
     "\n",
     "df1 = filter(df, Not(IsInt('value')))"
