--- a/examples/notebooks/Country Names.ipynb
+++ b/examples/notebooks/Country Names.ipynb
@@ -375,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openclean.function.predicate.domain import IsNotIn\n",
+    "from openclean.function.eval.predicate.domain import IsNotIn\n",
     "from openclean.operator.transform.filter import filter\n",
     "\n",
     "df1 = filter(df, IsNotIn('country_name', country_names))"
