Add aggregate function

--- a/examples/notebooks/Country Names.ipynb
+++ b/examples/notebooks/Country Names.ipynb
@@ -489,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openclean.data.transform import to_lookup\n",
+    "from openclean.data.util import to_lookup\n",
     "code_to_name = to_lookup(countries_groundtruth, 'alpha3Code', 'name')"
    ]
   },
