Add more unit tests for FD violations

--- a/examples/notebooks/Parking Violations - Functional Dependencies.ipynb
+++ b/examples/notebooks/Parking Violations - Functional Dependencies.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from openclean.data.load import stream\n",
     "\n",
-    "df = stream('jt7v-77mi.tsv.gz')"
+    "df = stream('/home/heiko/data/socrata/data.cityofnewyork.us/tsv/jt7v-77mi.tsv.gz')"
    ]
   },
   {
@@ -235,6 +235,83 @@
    ],
    "source": [
     "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openclean.operator.map.fd import fd_violations\n",
+    "\n",
+    "groups = fd_violations(df, lhs='Meter Number', rhs='Street')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "144-3942 2\n",
+      "126-4949 3\n",
+      "144-6383 2\n",
+      "144-3937 5\n",
+      "143-3785 5\n",
+      "144-6376 5\n",
+      "144-3958 3\n",
+      "144-3955 8\n",
+      "144-6088 4\n",
+      "144-6055 3\n",
+      "144-6377 3\n",
+      "140-5726 2\n",
+      "143-5983 3\n",
+      "140-5816 2\n",
+      "105-8347 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in groups:\n",
+    "    print('{} {}'.format(key, groups.get(key).shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "144-3942\tCounter({'WEST 42 STREET': 1, 'WEST 42 ST': 1})\n",
+      "126-4949\tCounter({'2nd Ave': 3})\n",
+      "144-6383\tCounter({'9TH AVE': 2})\n",
+      "144-3937\tCounter({'WEST 42 STREET': 3, 'WEST 42 ST': 1, 'W 42ND ST': 1})\n",
+      "143-3785\tCounter({'WEST 43RD ST': 3, 'WEST 43 ST': 1, 'W 43RD ST': 1})\n",
+      "144-6376\tCounter({'8TH AVENUE': 3, '8TH AVE': 2})\n",
+      "144-3958\tCounter({'WEST 41ST STREET': 2, '7TH AVENUE': 1})\n",
+      "144-3955\tCounter({'W 41 ST': 4, 'W 41ST STREET': 3, 'TIMES SQUARE': 1})\n",
+      "144-6088\tCounter({'WEST 36 STREET': 3, 'W 36TH ST': 1})\n",
+      "144-6055\tCounter({'W 37TH ST': 3})\n",
+      "144-6377\tCounter({'35 ST': 1, 'W 35 ST': 1, '8TH AVENUE': 1})\n",
+      "140-5726\tCounter({'W 53RD STREET': 2})\n",
+      "143-5983\tCounter({'W 43RD STREET': 2, 'WEST 43RD STREET': 1})\n",
+      "140-5816\tCounter({'8TH AVE': 1, 'WEST 45TH STREET': 1})\n",
+      "105-8347\tCounter({'WEST 181 ST': 1, 'W 181 ST': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openclean.function.distinct import distinct\n",
+    "\n",
+    "for key in groups:\n",
+    "    print('{}\\t{}'.format(key, distinct(groups.get(key), 'Street')))"
    ]
   }
  ],
