--- a/examples/notebooks/Parking Violations - Functional Dependencies.ipynb
+++ b/examples/notebooks/Parking Violations - Functional Dependencies.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from openclean.data.load import stream\n",
     "\n",
-    "df = stream('/home/heiko/data/socrata/data.cityofnewyork.us/tsv/jt7v-77mi.tsv.gz')"
+    "df = stream('jt7v-77mi.tsv')"
    ]
   },
   {
@@ -239,18 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openclean.operator.map.fd import fd_violations\n",
+    "from openclean.operator import fd_violations\n",
     "\n",
     "groups = fd_violations(df, lhs='Meter Number', rhs='Street')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
