Add limit for data stream

--- a/examples/notebooks/City Name Spellings - DOB Job Application Fillings.ipynb
+++ b/examples/notebooks/City Name Spellings - DOB Job Application Fillings.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openclean.data.load import stream\n",
     "\n",
-    "df = stream('/home/heiko/data/socrata/data.cityofnewyork.us/tsv/ic3t-wcy2.tsv.gz')"
+    "df = stream('ic3t-wcy2.tsv.gz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,15 +126,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openclean.function.eval.domain import IsNotIn\n",
     "\n",
     "df = df\\\n",
-    "    .select('Plate ID', 'Registration State', 'Plate Type', 'Meter Number', 'Street')\\\n",
-    "    .where(IsNotIn('Meter Number', set({'-', ''})), limit=100)"
+    "    .select('Borough', 'Street Name', 'City', 'State', 'Zip')\\\n",
+    "    .limit(10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openclean.operator import apply\n",
+    "\n",
+    "df = apply(df, 'City', str.upper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openclean. function.value.phonetic import Soundex\n",
+    "from openclean.operator import groupby\n",
+    "\n",
+    "soundex = Soundex()\n",
+    "\n",
+    "groups = groupby(df, 'City', soundex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openclean.function.eval.base import Col\n",
+    "from openclean.operator import filter\n",
+    "\n",
+    "brooklyn = filter(groups.get(soundex('BROOKLYN')), Col('City') != 'BROOKLYN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Street Name</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Zip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9209</th>\n",
+       "      <td>BRONX</td>\n",
+       "      <td>EAST  148 STREET</td>\n",
+       "      <td>BROOKLYM</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>11205</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Borough       Street Name      City State    Zip\n",
+       "9209   BRONX  EAST  148 STREET  BROOKLYM    NY  11205"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brooklyn"
    ]
   }
  ],
