Add row counter for stream

--- a/examples/notebooks/Data Streams.ipynb
+++ b/examples/notebooks/Data Streams.ipynb
@@ -88,6 +88,50 @@
     {
      "data": {
       "text/plain": [
+       "999"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count the number of rows in the stream.\n",
+    "\n",
+    "ds.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count the number of distinct values in column 'borough'\n",
+    "\n",
+    "ds.count('borough')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "Counter({'MANHATTAN': 332,\n",
        "         'QUEENS': 212,\n",
        "         'BRONX': 112,\n",
@@ -96,7 +140,7 @@
        "         'STATEN ISLAND': 62})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +250,7 @@
        "9    MANHATTAN       NEW YORK"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,9 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GO\n",
+      "PREPARED\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -277,7 +329,7 @@
        "         ('MANHATTAN', 'BY'): 1})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,13 +346,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "GO\n",
+      "PREPARED\n",
       "0 ['MANHATTAN', 'NEW YORK']\n",
       "1 ['QUEENS', 'FLUSHING']\n",
       "2 ['QUEENS', 'EAST ELMHURST']\n",
@@ -325,9 +379,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GO\n",
+      "PREPARED\n"
+     ]
+    }
+   ],
    "source": [
     "# Write names of neighborhoods in Queens to file (note that this does\n",
     "# not remove duplicates at this time).\n",
