Add profiling operator for data streams.

--- a/examples/notebooks/Data Streams.ipynb
+++ b/examples/notebooks/Data Streams.ipynb
@@ -131,7 +131,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    {\n",
+      "        \"column\": \"borough\",\n",
+      "        \"stats\": {\n",
+      "            \"minimumValue\": \"BRONX\",\n",
+      "            \"maximumValue\": \"Unspecified\",\n",
+      "            \"totalValueCount\": 999,\n",
+      "            \"emptyValueCount\": 0,\n",
+      "            \"distinctValueCount\": 6,\n",
+      "            \"topValues\": [\n",
+      "                [\n",
+      "                    \"MANHATTAN\",\n",
+      "                    332\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"BROOKLYN\",\n",
+      "                    231\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"QUEENS\",\n",
+      "                    212\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"BRONX\",\n",
+      "                    112\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"STATEN ISLAND\",\n",
+      "                    62\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"Unspecified\",\n",
+      "                    50\n",
+      "                ]\n",
+      "            ],\n",
+      "            \"datatypes\": {\n",
+      "                \"text\": {\n",
+      "                    \"distinct\": 6,\n",
+      "                    \"total\": 999\n",
+      "                }\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    {\n",
+      "        \"column\": \"city\",\n",
+      "        \"stats\": {\n",
+      "            \"minimumValue\": \"ARVERNE\",\n",
+      "            \"maximumValue\": \"WOODSIDE\",\n",
+      "            \"totalValueCount\": 999,\n",
+      "            \"emptyValueCount\": 100,\n",
+      "            \"distinctValueCount\": 45,\n",
+      "            \"topValues\": [\n",
+      "                [\n",
+      "                    \"NEW YORK\",\n",
+      "                    304\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"BROOKLYN\",\n",
+      "                    221\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"BRONX\",\n",
+      "                    107\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"STATEN ISLAND\",\n",
+      "                    59\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"JAMAICA\",\n",
+      "                    25\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"FLUSHING\",\n",
+      "                    21\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"NY\",\n",
+      "                    11\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"EAST ELMHURST\",\n",
+      "                    10\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"MASPETH\",\n",
+      "                    10\n",
+      "                ],\n",
+      "                [\n",
+      "                    \"ASTORIA\",\n",
+      "                    10\n",
+      "                ]\n",
+      "            ],\n",
+      "            \"datatypes\": {\n",
+      "                \"text\": {\n",
+      "                    \"distinct\": 45,\n",
+      "                    \"total\": 899\n",
+      "                }\n",
+      "            }\n",
+      "        }\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Profile columns borough and city using the default column profiler.\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "from openclean.profiling.column import DefaultColumnProfiler as Profiler\n",
+    "\n",
+    "profiles = ds.profile([('borough', Profiler()), ('city', Profiler())])\n",
+    "\n",
+    "print(json.dumps(profiles, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +354,7 @@
        "9    MANHATTAN       NEW YORK"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +425,7 @@
        "         ('MANHATTAN', 'BY'): 1})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,13 +482,6 @@
     "\n",
     "ds.select('borough', 'city').filter(Col('borough') == 'QUEENS').select('city').write('../data/queens.tsv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
