--- a/examples/notebooks/Performance Tests.ipynb
+++ b/examples/notebooks/Performance Tests.ipynb
@@ -378,6 +378,98 @@
     "\n",
     "print('Runtime  for set {} s'.format(end -start))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Zipping two lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T1 0.5678404180071084s\n",
+      "T2 0.9957315350038698s\n"
+     ]
+    }
+   ],
+   "source": [
+    "import operator\n",
+    "import time\n",
+    "\n",
+    "a = list(range(100000))\n",
+    "b = list(range(100000))\n",
+    "\n",
+    "f = operator.eq\n",
+    "\n",
+    "t0 = time.perf_counter()\n",
+    "\n",
+    "for i in range(100):\n",
+    "    c = [f(e1, e2) for e1, e2 in zip(a, b)]\n",
+    "    \n",
+    "t1 = time.perf_counter()\n",
+    "\n",
+    "for i in range(100):\n",
+    "    c = [f(a[j], b[j]) for j in range(len(a))]\n",
+    "\n",
+    "t2 = time.perf_counter()\n",
+    "\n",
+    "\n",
+    "print('T1 {}s'.format(t1 - t0))\n",
+    "print('T2 {}s'.format(t2 - t1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterate over tuples in a data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T1 0.12496001500403509s\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "\n",
+    "filename = 'NYCRestaurantInspections/data/43nn-pn8j.tsv.gz'\n",
+    "nyc = pd.read_csv(filename, delimiter='\\t', compression='gzip')\n",
+    "\n",
+    "query = nyc[['CAMIS', 'BORO']]\n",
+    "\n",
+    "t0 = time.perf_counter()\n",
+    "\n",
+    "[t for t in query.itertuples(index=False, name=None)]\n",
+    "\n",
+    "t1 = time.perf_counter()\n",
+    "print('T1 {}s'.format(t1 - t0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
