Update profiling example notebook

--- a/examples/notebooks/NYCRestaurantInspections/NYC Restaurant Inspections - Profiling.ipynb
+++ b/examples/notebooks/NYCRestaurantInspections/NYC Restaurant Inspections - Profiling.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "import os\n",
     "\n",
-    "from openclean.data.load import stream\n",
+    "from openclean.pipeline import stream\n",
     "\n",
     "ds = stream(os.path.join('data', '43nn-pn8j.tsv.gz'))"
    ]
@@ -1796,7 +1796,7 @@
     "# Count total, empty, and distinct values for the columns that we\n",
     "# expect to be empty for new establishments.\n",
     "ds.filter(Datetime('INSPECTION DATE') == new_establ_date)\\\n",
-    "    .select('ACTION', 'INSPECTION TYPE', 'SCORE', 'GRADE')\\\n",
+    "    .select(['ACTION', 'INSPECTION TYPE', 'SCORE', 'GRADE'])\\\n",
     "    .profile(default_profiler=DefaultColumnProfiler)\\\n",
     "    .stats()"
    ]
@@ -2019,6 +2019,13 @@
    "source": [
     "ds.distinct('CUISINE DESCRIPTION')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
