aggregate added to notebook

--- a/examples/notebooks/NYCRestaurantInspections/NYC Restaurant Inspections - Cleaning.ipynb
+++ b/examples/notebooks/NYCRestaurantInspections/NYC Restaurant Inspections - Cleaning.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "import os\n",
     "\n",
-    "from openclean.data.load import stream\n",
+    "from openclean.pipeline import stream\n",
     "\n",
     "ds = stream(os.path.join('data', '43nn-pn8j.tsv.gz'))"
    ]
@@ -60,7 +60,7 @@
     "    'GRADE',\n",
     "    'INSPECTION TYPE'\n",
     "]\n",
-    "ds = ds.select(*columns)"
+    "ds = ds.select(columns)"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "from openclean.function.eval.datatype import Datetime\n",
     "from openclean.function.eval.logic import And\n",
     "from openclean.function.eval.null import IsNotEmpty\n",
-    "from openclean.function.eval.mapping import Lookup\n",
+    "from openclean.function.eval.domain import Lookup\n",
     "\n",
     "# Date that identifies new establishments that have not\n",
     "# been inspected.\n",
@@ -617,22 +617,22 @@
        "08A       6\n",
        "10F       5\n",
        "04L       5\n",
-       "06C       4\n",
        "02B       4\n",
+       "06C       4\n",
+       "06D       3\n",
        "02G       3\n",
        "22F       3\n",
-       "06D       3\n",
-       "22G       2\n",
        "06B       2\n",
        "10B       2\n",
-       "04K       1\n",
-       "04N       1\n",
-       "04H       1\n",
-       "10D       1\n",
+       "22G       2\n",
        "05A       1\n",
-       "09B       1\n",
+       "04K       1\n",
        "04M       1\n",
+       "04H       1\n",
        "04F       1\n",
+       "04N       1\n",
+       "10D       1\n",
+       "09B       1\n",
        "Name: VIOLATION CODE, dtype: int64"
       ]
      },
@@ -659,28 +659,28 @@
        "02G    10\n",
        "04L     8\n",
        "06D     8\n",
+       "10F     7\n",
        "02B     7\n",
        "06C     7\n",
-       "10F     7\n",
        "06E     6\n",
        "05D     4\n",
        "04H     4\n",
-       "10B     3\n",
        "04A     3\n",
+       "10B     3\n",
        "04M     3\n",
+       "04N     2\n",
+       "06A     2\n",
        "10H     2\n",
        "10I     2\n",
        "06F     2\n",
-       "06A     2\n",
        "09B     2\n",
-       "04N     2\n",
-       "04C     1\n",
-       "06B     1\n",
        "04K     1\n",
        "08C     1\n",
+       "04C     1\n",
+       "09C     1\n",
+       "06B     1\n",
        "03A     1\n",
        "07A     1\n",
-       "09C     1\n",
        "Name: VIOLATION CODE, dtype: int64"
       ]
      },
@@ -1185,22 +1185,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3276.0012001470022 s to aggregate 128455 groups\n"
+     ]
+    }
+   ],
    "source": [
     "# This is where we could use a customizable aggregator function\n",
+    "from openclean.operator.collector.aggregate import aggregate\n",
     "\n",
     "inspections = groupby(df, ['CAMIS', 'INSPECTION DATE'])\n",
     "\n",
-    "def my_agg(df):\n",
+    "\n",
+    "def get_most_frequent(group):\n",
     "    # If conflict in df['SCORE'] select most frequent value\n",
     "    # Select only the columns we are interested in\n",
     "    # Return a single row per group\n",
-    "    return single_row\n",
+    "    from collections import Counter\n",
+    "    row = dict()\n",
+    "    for cols in group.columns:\n",
+    "        if cols in ['SCORE']:\n",
+    "            # incase multiple values with same count, returns top alphabetically/numerically\n",
+    "            # remember: (nan = last alphabetically, but first numerically)\n",
+    "            row[cols] = Counter(group[cols]).most_common(1)[0][0]\n",
+    "        else:\n",
+    "            row[cols] = group[cols].values[0]\n",
+    "    return row\n",
     "\n",
-    "df_clean = aggregate(inspections, func=my_agg, schema=['CAMIS', 'BORO', 'CUISINE', 'DATE', 'TYPE', 'SCORE'])"
+    "import time\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "\n",
+    "df_clean = aggregate(inspections, func=get_most_frequent)\n",
+    "\n",
+    "end = time.perf_counter()\n",
+    "\n",
+    "print('{} s to aggregate {} groups'.format(end - start, len(inspections)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>CAMIS</th>\n",
+       "      <th>DBA</th>\n",
+       "      <th>BORO</th>\n",
+       "      <th>BUILDING</th>\n",
+       "      <th>STREET</th>\n",
+       "      <th>ZIPCODE</th>\n",
+       "      <th>CUISINE DESCRIPTION</th>\n",
+       "      <th>INSPECTION DATE</th>\n",
+       "      <th>VIOLATION CODE</th>\n",
+       "      <th>CRITICAL FLAG</th>\n",
+       "      <th>SCORE</th>\n",
+       "      <th>GRADE</th>\n",
+       "      <th>INSPECTION TYPE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>50001317</th>\n",
+       "      <th>2018-05-04</th>\n",
+       "      <td>50001317</td>\n",
+       "      <td>D'LILI BAKERY</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>526</td>\n",
+       "      <td>W 207TH ST</td>\n",
+       "      <td>10034</td>\n",
+       "      <td>Bakery</td>\n",
+       "      <td>2018-05-04</td>\n",
+       "      <td>02G</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>19</td>\n",
+       "      <td></td>\n",
+       "      <td>Cycle Inspection / Initial Inspection</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41716448</th>\n",
+       "      <th>2019-07-30</th>\n",
+       "      <td>41716448</td>\n",
+       "      <td>HARLEM SHAKE</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>100</td>\n",
+       "      <td>WEST 124 STREET</td>\n",
+       "      <td>10027</td>\n",
+       "      <td>American</td>\n",
+       "      <td>2019-07-30</td>\n",
+       "      <td>09B</td>\n",
+       "      <td>N</td>\n",
+       "      <td>27</td>\n",
+       "      <td>B</td>\n",
+       "      <td>Cycle Inspection / Re-inspection</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50044535</th>\n",
+       "      <th>2017-06-14</th>\n",
+       "      <td>50044535</td>\n",
+       "      <td>HAWKERS</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>225</td>\n",
+       "      <td>E 14TH ST</td>\n",
+       "      <td>10003</td>\n",
+       "      <td>Asian</td>\n",
+       "      <td>2017-06-14</td>\n",
+       "      <td>04L</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>24</td>\n",
+       "      <td></td>\n",
+       "      <td>Cycle Inspection / Initial Inspection</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50041601</th>\n",
+       "      <th>2019-05-09</th>\n",
+       "      <td>50041601</td>\n",
+       "      <td>118 KITCHEN</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>1</td>\n",
+       "      <td>E 118TH ST</td>\n",
+       "      <td>10035</td>\n",
+       "      <td>Tex-Mex</td>\n",
+       "      <td>2019-05-09</td>\n",
+       "      <td>10B</td>\n",
+       "      <td>N</td>\n",
+       "      <td>11</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Cycle Inspection / Initial Inspection</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50045596</th>\n",
+       "      <th>2016-09-07</th>\n",
+       "      <td>50045596</td>\n",
+       "      <td>NEW CHINA</td>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>5690</td>\n",
+       "      <td>MOSHOLU AVE</td>\n",
+       "      <td>10471</td>\n",
+       "      <td>Chinese</td>\n",
+       "      <td>2016-09-07</td>\n",
+       "      <td>04M</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>12</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Cycle Inspection / Re-inspection</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        CAMIS            DBA       BORO BUILDING  \\\n",
+       "50001317 2018-05-04  50001317  D'LILI BAKERY  Manhattan      526   \n",
+       "41716448 2019-07-30  41716448   HARLEM SHAKE  Manhattan      100   \n",
+       "50044535 2017-06-14  50044535        HAWKERS  Manhattan      225   \n",
+       "50041601 2019-05-09  50041601    118 KITCHEN  Manhattan        1   \n",
+       "50045596 2016-09-07  50045596      NEW CHINA      Bronx     5690   \n",
+       "\n",
+       "                              STREET ZIPCODE CUISINE DESCRIPTION  \\\n",
+       "50001317 2018-05-04       W 207TH ST   10034              Bakery   \n",
+       "41716448 2019-07-30  WEST 124 STREET   10027            American   \n",
+       "50044535 2017-06-14        E 14TH ST   10003               Asian   \n",
+       "50041601 2019-05-09       E 118TH ST   10035             Tex-Mex   \n",
+       "50045596 2016-09-07      MOSHOLU AVE   10471             Chinese   \n",
+       "\n",
+       "                    INSPECTION DATE VIOLATION CODE CRITICAL FLAG SCORE GRADE  \\\n",
+       "50001317 2018-05-04      2018-05-04            02G             Y    19         \n",
+       "41716448 2019-07-30      2019-07-30            09B             N    27     B   \n",
+       "50044535 2017-06-14      2017-06-14            04L             Y    24         \n",
+       "50041601 2019-05-09      2019-05-09            10B             N    11     A   \n",
+       "50045596 2016-09-07      2016-09-07            04M             Y    12     A   \n",
+       "\n",
+       "                                           INSPECTION TYPE  \n",
+       "50001317 2018-05-04  Cycle Inspection / Initial Inspection  \n",
+       "41716448 2019-07-30       Cycle Inspection / Re-inspection  \n",
+       "50044535 2017-06-14  Cycle Inspection / Initial Inspection  \n",
+       "50041601 2019-05-09  Cycle Inspection / Initial Inspection  \n",
+       "50045596 2016-09-07       Cycle Inspection / Re-inspection  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1219,7 +1424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
